# Verge

./: README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
backend/: .gitignore  README.md  pyproject.toml
backend/app/traffic_monitor/: __init__.py  api.py  cli.py  config.py  detector.py  model_store.py  signal_optimizer.py
backend/tests/: test_api.py  test_detector.py  test_signal_optimizer.py
components/tabs/: SettingsTab.tsx  StatsTab.tsx  VergeTab.tsx
frontend/: .env.example  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: TrafficMonitor.tsx
frontend/components/tabs/: IncidentsTab.tsx  ParkingTab.tsx  ReportsTab.tsx  SettingsTab.tsx  StatsTab.tsx  VergeTab.tsx
frontend/components/traffic/: TrafficUploadPanel.tsx
frontend/lib/: data.ts
scripts/: repair-and-push.sh
