[project]
name = "verge-traffic-backend"
version = "0.1.0"
description = "CLI traffic detection and signal balancing for Verge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lap>=0.5.12",
  "numpy>=2.0.0",
  "opencv-python-headless>=4.10.0",
  "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
verge-traffic = "traffic_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/traffic_monitor"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
